Changed toolbar icons for better asthetics Added detached toolbar Added Tray Icon ability using TrayIconFX